--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
     <h1>Willkommen auf meiner Homepage</h1>
-        <p>Mein Name Sebastian Kuhlbrodt</p>
+        <p>Mein Name Sebastian Kuhlbrodt!</p>
     </body>
 
 </html>
